--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
        <h2>This is column three</h2>
        <p>Some content, some content, some content</p>
     </div>
+    </div>
 
     <footer>
         <h1>This is a footer</h1>
